--- a/products.html
+++ b/products.html
@@ -36,10 +36,10 @@
                       <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                   </label>
                 <label class="btn btn-light" id="sortByPrecioAsc" >
-                  <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up-alt"></i></i>Precio
+                  <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-numeric-down"></i></i>Precio
               </label>
               <label class="btn btn-light" id="sortByPrecioDesc" >
-                <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio
+                <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-numeric-down-alt"></i>Precio
             </label>
               </div>
           </div>
