--- a/product-info.html
+++ b/product-info.html
@@ -17,13 +17,25 @@
 
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
-    <div class="container d-flex flex-column flex-md-row justify-content-between" id="Opciones">
+    <div class="container d-flex flex-column flex-md-row justify-content-between">
       <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-    </div>
+      
+      <!-- boton de perfil -->
+      <div class="dropdown" id="nombreUsuario" >
+        <!-- <a class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" class="btn btn-light btn-lg btn-block"  class="py-2 d-none d-md-inline-block" role="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        </a> -->
+        
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+          <a class="dropdown-item" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" onclick="cerrarSesion()" id="cerrarSesion">Cerrar sesión</a>
+        </div>
+      </div>
+    </div>  
   </nav>
   <main role="main">
     <div class="container mt-5">
@@ -104,25 +116,13 @@
     <tr>
       <td>
     <h4>Califica el producto</h4>
-    <div class="valoracion">
-      <dt class="estrella" required>
-      <button>
-          <i class="fas fa-star"></i>
-      </button>
-      <button>
-          <i class="fas fa-star"></i>
-      </button>
-      <button>
-          <i class="fas fa-star"></i>
-      </button>
-      <button>
-          <i class="fas fa-star"></i>
-      </button>
-      <button>
-          <i class="fas fa-star"></i>
-      </button>
-    </dt>
-  </div>
+    <div class="ec-stars-wrapper">
+      <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+      <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+      <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+      <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+      <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+    </div>
   <br>
     <input type="button" onclick="newcomment()" value="Enviar">
     </td>
