--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="https://fontawesome.com/icons">
 
   <style>
     .bd-placeholder-img {
@@ -43,8 +44,6 @@
       
       <!-- boton de perfil -->
       <div class="dropdown" id="nombreUsuario" >
-        <!-- <a class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" class="btn btn-light btn-lg btn-block"  class="py-2 d-none d-md-inline-block" role="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a> -->
         
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
           <a class="dropdown-item" href="cart.html">Mi carrito</a>
@@ -55,14 +54,6 @@
       </div>
     </div>  
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 11/10/2020) y Entrega 6 (Fecha de entrega: 25/10/2020).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
-  </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
@@ -71,11 +62,140 @@
       <div></div>
     </div>
   </div>
+  <div class="container">
+    <div class="text-center p-4">
+      <h2>Carrito de compras</h2>
+    </div>
+     <!--productos-->
+
+     <table class="table">
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Costo</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Subtotal</th>
+        </tr>
+      </thead>
+      <tbody id="containerArticle">
+      </tbody>
+    </table>
+</div>
+<div class="container">
+<hr>
+<br>
+</div>
+<!-- Formulario de datos de envio -->
+<div class="container">
+  <fieldset class="form-group">
+  <form class="needs-validation" id="buyForm">
+    <hr class="mb-4">
+      <div class="row">
+        <h4 class="mb-3">Tipo de envío</h4>
+        <div class="d-block my-3">
+          <div class="form-check custom-control custom-radio">
+            <input class="form-check-input" type="radio" name="envio" id="envio1" value="option1" checked>
+            <label class="form-check-label" for="envio1">
+              Premium 2 a 5 días (15%)
+            </label>
+          </div>
+        </form>
+          <div class="form-check custom-control custom-radio">
+            <input class="form-check-input" type="radio" name="envio" id="envio2" value="option2">
+            <label class="form-check-label" for="envio2">
+                Express 5 a 8 días (7%)
+            </label>
+          </div>
+          <div class="form-check disabled custom-control custom-radio">
+            <input class="form-check-input" type="radio" name="envio" id="envio3" value="option3">
+            <label class="form-check-label" for="envio3">
+              Standard 12 a 15 días (5%)
+            </label>
+          </div>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+    <div class="container" id="envio">
+      <h5><strong>Dirección de envío</strong></h5>
+      <form>
+        <div class="form-group mx-sm-3">
+            <label for="inputCalle" class="col-sm-2 col-form-label">Calle</label>
+            <input type="text" class="form-control" id="inputUser" placeholder="Calle">
+        </div>
+        <div class="form-group mx-sm-3">
+            <label for="inputNumero" class="col-sm-2 col-form-label">N°</label>
+            <input type="number" class="form-control" id="inputNum" placeholder="Número">
+        </div>
+        <div class="form-group mx-sm-3" class="col-sm-10">
+            <label for="inputPuerta3" class="col-sm-2 col-form-label">Esquina</label>
+            <input type="text" class="form-control" id="inputEsquina" placeholder="Esquina">
+          </div>
+          <div class="form-group mx-sm-3">
+            <label for="inputDepartamento3" class="col-sm-2 col-form-label">Departamento</label>
+            <option value="" disabled selected></option>
+            <select name="Departamento" class="browser-default custom-select">
+            <option>Artigas</option>
+            <option>Canelones</option>
+            <option>Cerro Largo</option>
+            <option>Colonia</option>
+            <option>Durazno</option>
+            <option>Flores</option>
+            <option>Florida</option>
+            <option>Lavalleja</option>
+            <option>Maldonado</option>
+            <option>Montevideo</option>
+            <option>Paysandú</option>
+            <option>Río Negro</option>
+            <option>Rivera</option>
+            <option>Rocha</option>
+            <option>Salto</option>
+            <option>San José</option>
+            <option>Soriano</option>
+            <option>Tacuarembó</option>
+            <option>Treinta y tres</option>
+          </select>
+        </div>
+        </div>
+  </form>
+</div><br>
+<!--Costos-->
+<!--Seleccionar moneda con un select-->
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h4 class="mb-3">Costos</h4>
+      <div class="form-group mx-sm-3">
+        <label for="inputDepartamento3" class="col-sm-2 col-form-label">Elegir moneda</label>
+        <option value="" disabled selected></option>
+        <select name="moneda" class="browser-default custom-select">
+        <option onclick="cambiarMoneda()">UY</option>
+        <option onclick="cambiarMoneda()">USD</option>
+      </select>
+    </div>
+    <ul class = "list-group mb-3">
+      <li class="list-group-item justify-content-between d-flex"><h5>SubTotal </h5><span id="subTotalT"></span><!-- Agregar descripcion --></li>
+      <li class="list-group-item justify-content-between d-flex"><h5>Costo de envio </h5><span id="costoEnvio"></span></li>
+      <li class="list-group-item justify-content-between d-flex"><h5>Total </h5><span id="totalCost"></span></li>
+    </ul>  
+  </div>
+</div>
+<div class="col-lg-12">
+  <div class="text-right">
+      <button class="btn btn-primary lg" type="button">Confirmar</button>
+
+  </div>
+</div>
+<br>
+</div>
+<div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
+
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
+  <script src="js/cart1.js"></script>
 </body>
 
 </html>
