--- a/cart.html
+++ b/cart.html
@@ -76,6 +76,7 @@
           <th scope="col">Costo</th>
           <th scope="col">Cantidad</th>
           <th scope="col">Subtotal</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody id="containerArticle">
@@ -91,74 +92,38 @@
   <fieldset class="form-group">
   <form class="needs-validation" id="buyForm">
     <hr class="mb-4">
-      <div class="row">
+      <div class="row container">
         <h4 class="mb-3">Tipo de envío</h4>
         <div class="d-block my-3">
+          <br>
           <div class="form-check custom-control custom-radio">
-            <input class="form-check-input" type="radio" name="envio" id="envio1" value="option1" checked>
-            <label class="form-check-label" for="envio1">
+            <input class="form-check-input" type="radio" name="envio" id="envio1" value="option1">
+            <label class="form-check-label">
               Premium 2 a 5 días (15%)
             </label>
           </div>
         </form>
           <div class="form-check custom-control custom-radio">
             <input class="form-check-input" type="radio" name="envio" id="envio2" value="option2">
-            <label class="form-check-label" for="envio2">
+            <label class="form-check-label">
                 Express 5 a 8 días (7%)
             </label>
           </div>
           <div class="form-check disabled custom-control custom-radio">
             <input class="form-check-input" type="radio" name="envio" id="envio3" value="option3">
-            <label class="form-check-label" for="envio3">
+            <label class="form-check-label">
               Standard 12 a 15 días (5%)
             </label>
           </div>
         </div>
       </div>
+      <div>
+          <button class="btn btn-primary" onclick="validacionEnvio()">Añadir dirección de envio</button>
+          <div id="validar"></div>
+      </div>
     </fieldset>
   </div>
     <div class="container" id="envio">
-      <h5><strong>Dirección de envío</strong></h5>
-      <form>
-        <div class="form-group mx-sm-3">
-            <label for="inputCalle" class="col-sm-2 col-form-label">Calle</label>
-            <input type="text" class="form-control" id="inputUser" placeholder="Calle">
-        </div>
-        <div class="form-group mx-sm-3">
-            <label for="inputNumero" class="col-sm-2 col-form-label">N°</label>
-            <input type="number" class="form-control" id="inputNum" placeholder="Número">
-        </div>
-        <div class="form-group mx-sm-3" class="col-sm-10">
-            <label for="inputPuerta3" class="col-sm-2 col-form-label">Esquina</label>
-            <input type="text" class="form-control" id="inputEsquina" placeholder="Esquina">
-          </div>
-          <div class="form-group mx-sm-3">
-            <label for="inputDepartamento3" class="col-sm-2 col-form-label">Departamento</label>
-            <option value="" disabled selected></option>
-            <select name="Departamento" class="browser-default custom-select">
-            <option>Artigas</option>
-            <option>Canelones</option>
-            <option>Cerro Largo</option>
-            <option>Colonia</option>
-            <option>Durazno</option>
-            <option>Flores</option>
-            <option>Florida</option>
-            <option>Lavalleja</option>
-            <option>Maldonado</option>
-            <option>Montevideo</option>
-            <option>Paysandú</option>
-            <option>Río Negro</option>
-            <option>Rivera</option>
-            <option>Rocha</option>
-            <option>Salto</option>
-            <option>San José</option>
-            <option>Soriano</option>
-            <option>Tacuarembó</option>
-            <option>Treinta y tres</option>
-          </select>
-        </div>
-        </div>
-  </form>
 </div><br>
 <!--Costos-->
 <!--Seleccionar moneda con un select-->
@@ -174,8 +139,9 @@
         <option onclick="cambiarMoneda()">USD</option>
       </select>
     </div>
+    <!-- Costos -->
     <ul class = "list-group mb-3">
-      <li class="list-group-item justify-content-between d-flex"><h5>SubTotal </h5><span id="subTotalT"></span><!-- Agregar descripcion --></li>
+      <li class="list-group-item justify-content-between d-flex"><h5>SubTotal </h5><span id="subtotalT"></span><!-- Agregar descripcion --></li>
       <li class="list-group-item justify-content-between d-flex"><h5>Costo de envio </h5><span id="costoEnvio"></span></li>
       <li class="list-group-item justify-content-between d-flex"><h5>Total </h5><span id="totalCost"></span></li>
     </ul>  
@@ -183,8 +149,56 @@
 </div>
 <div class="col-lg-12">
   <div class="text-right">
-      <button class="btn btn-primary lg" type="button">Confirmar</button>
-
+      <button class="btn btn-primary lg" type="button" id="valid2" data-toggle="modal" data-target="#centralModalInfo">Seleccionar forma de pago</button><!-- Boton para que aparezca el modal -->
+  </div>
+      <!-- Modal -->
+      <div class="modal fade" id="centralModalInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-notify modal-info" role="document">
+          <!--Contenido del modal-->
+          <div class="modal-content">
+            <!--Titulo del modal-->
+            <div class="modal-header">
+              <h5><strong>Seleccionar forma de pago</strong></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true" class="white-text">&times;</span>
+              </button>
+            </div>
+            <!--Contenido principal del modal-->
+            <div class="modal-body">
+              <div class="text-center">
+            <div class="payment">
+              <form>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="exampleRadios" id="pagoTarj" value="option" onclick="expandir()">
+                  <label class="form-check-label" for="tarjeta">
+                    Tarjeta de crédito
+                  </label>
+                </div>
+                  <div class="form-check" id="tarjeta">
+                  </div>
+                  <hr>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="transBanc" value="option" onclick="expand()">
+                    <label class="form-check-label" for="transferencia">
+                      Transferencia bancaria
+                    </label>
+                    <div class="form-check" id="transferencia">
+                    </div> 
+              </form>
+          </div>
+          </div>
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+              <button type="button" id="fin" class="btn btn-primary text-center">Finalizar compra</button>
+              <div id="fin"></div>
+              <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Cancelar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
   </div>
 </div>
 <br>
@@ -195,7 +209,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
-  <script src="js/cart1.js"></script>
+  <script src="js/cart.js"></script>
 </body>
 
 </html>
